--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p>I thrive at the intersection of front-end aesthetics and back-end logic, believing that great software is both beautiful and functional. Whether it's designing an intuitive user interface or optimizing database queries, I approach each challenge with analytical thinking and creative problem-solving.</p>
                     <p>I'm actively seeking internships and collaborative projects where I can apply my skills, learn from experienced professionals, and contribute to meaningful solutions. I believe in continuous learning and am always exploring new technologies and best practices in software engineering.</p>
                 </div>
-                <div class="about-image"></div>
+                <div ><img src="profile.jpg" alt="" class="about-image"></div>
             </div>
         </div>
     </section>
@@ -200,12 +200,12 @@
         <div class="contact-content">
             <h2>Get In Touch</h2>
             <p>I'm currently looking for new opportunities. My inbox is always open whether you have a question or just want to say hi, I'll try my best to get back to you!</p>
-            <a href="mailto:nurrideen.marshall@example.com" class="btn">Send Me an Email</a>
+            <a href="marshallnurrideen@gmail.com" class="btn">Send Me an Email</a>
             <div class="social-links">
                 <a href="#" class="social-link" title="LinkedIn">
                     <i class="fab fa-linkedin"></i>
                 </a>
-                <a href="#" class="social-link" title="GitHub">
+                <a href="https://github.com/Marshall-web" class="social-link" title="GitHub">
                     <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="social-link" title="Twitter">
