weather project compleete,

--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                             <span class="tech-tag">HTML/CSS</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link">
+                            <a href="https://weather-analytics-app.netlify.app/" class="project-link">
                                 <i class="fas fa-external-link-alt"></i> Live Demo
                             </a>
-                            <a href="#" class="project-link">
+                            <a href="https://github.com/Marshall-web/Weather-Analytic-App" class="project-link">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
